meta2/y.output
Terminais não usados na gramática

    ARROW
    RESERVED
    MUL
    LOWER
    HIGHER


Gramática

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE recPR RBRACE
    2        | CLASS ID LBRACE RBRACE

    3 recPR: MethodDecl
    4      | FieldDecl
    5      | SEMICOLON
    6      | MethodDecl recPR
    7      | FieldDecl recPR
    8      | SEMICOLON recPR

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   10 FieldDecl: PUBLIC STATIC Type ID recCOMMAID SEMICOLON
   11          | PUBLIC STATIC Type ID SEMICOLON
   12          | error SEMICOLON

   13 recCOMMAID: COMMA ID
   14           | COMMA ID recCOMMAID

   15 Type: BOOL
   16     | INT
   17     | DOUBLE

   18 MethodHeader: Type ID LPAR FormalParams RPAR
   19             | Type ID LPAR RPAR
   20             | VOID ID LPAR FormalParams RPAR
   21             | VOID ID LPAR RPAR

   22 FormalParams: Type ID recFP
   23             | STRING LSQ RSQ ID

   24 recFP: COMMA Type ID recFP
   25      | ε

   26 MethodBody: LBRACE recMD RBRACE
   27           | LBRACE RBRACE

   28 recMD: Statement
   29      | VarDecl
   30      | Statement recMD
   31      | VarDecl recMD

   32 VarDecl: Type ID recVAR SEMICOLON
   33        | Type ID SEMICOLON

   34 recVAR: COMMA ID
   35       | COMMA ID recVAR

   36 Statement: LBRACE recSTAT RBRACE
   37          | LBRACE RBRACE
   38          | IF LPAR Expr RPAR Statement ELSE Statement
   39          | IF LPAR Expr RPAR Statement
   40          | WHILE LPAR Expr RPAR Statement
   41          | RETURN Expr SEMICOLON
   42          | RETURN SEMICOLON
   43          | MethodInvocation SEMICOLON
   44          | Assignment SEMICOLON
   45          | ParseArgs SEMICOLON
   46          | SEMICOLON
   47          | PRINT LPAR Expr RPAR SEMICOLON
   48          | PRINT LPAR STRLIT RPAR SEMICOLON
   49          | PRINT LPAR RPAR SEMICOLON
   50          | error SEMICOLON

   51 recSTAT: Statement
   52        | recSTAT Statement

   53 MethodInvocation: ID LPAR Expr recCOMMAEXP RPAR
   54                 | ID LPAR Expr RPAR
   55                 | ID LPAR RPAR
   56                 | ID LPAR error RPAR

   57 recCOMMAEXP: recCOMMAEXP COMMA Expr
   58            | COMMA Expr

   59 Assignment: ID ASSIGN Expr

   60 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR
   61          | PARSEINT LPAR error RPAR

   62 Expr: Expr PLUS Expr
   63     | Expr MINUS Expr
   64     | Expr STAR Expr
   65     | Expr DIV Expr
   66     | Expr MOD Expr
   67     | Expr AND Expr
   68     | Expr OR Expr
   69     | Expr XOR Expr
   70     | Expr LSHIFT Expr
   71     | Expr RSHIFT Expr
   72     | Expr EQ Expr
   73     | Expr GE Expr
   74     | Expr GT Expr
   75     | Expr LE Expr
   76     | Expr LT Expr
   77     | Expr NE Expr
   78     | MINUS Expr
   79     | PLUS Expr
   80     | NOT Expr
   81     | LPAR Expr RPAR
   82     | MethodInvocation
   83     | Assignment
   84     | ParseArgs
   85     | ID
   86     | ID DOTLENGTH
   87     | INTLIT
   88     | REALLIT
   89     | BOOLLIT
   90     | LPAR error RPAR


Terminais, com regras onde aparecem

    $end (0) 0
    error (256) 12 50 56 61 90
    ID <id> (258) 1 2 10 11 13 14 18 19 20 21 22 23 24 32 33 34 35 53 54 55 56 59 60 85 86
    INTLIT <id> (259) 87
    STRLIT <id> (260) 48
    REALLIT <id> (261) 88
    BOOLLIT <id> (262) 89
    AND (263) 67
    ASSIGN (264) 59
    STAR (265) 64
    COMMA (266) 13 14 24 34 35 57 58
    DIV (267) 65
    EQ (268) 72
    GE (269) 73
    GT (270) 74
    LBRACE (271) 1 2 26 27 36 37
    LE (272) 75
    LPAR (273) 18 19 20 21 38 39 40 47 48 49 53 54 55 56 60 61 81 90
    LSQ (274) 23 60
    LT (275) 76
    MINUS (276) 63 78
    MOD (277) 66
    NE (278) 77
    NOT (279) 80
    OR (280) 68
    PLUS (281) 62 79
    RBRACE (282) 1 2 26 27 36 37
    RPAR (283) 18 19 20 21 38 39 40 47 48 49 53 54 55 56 60 61 81 90
    RSQ (284) 23 60
    SEMICOLON (285) 5 8 10 11 12 32 33 41 42 43 44 45 46 47 48 49 50
    ARROW (286)
    LSHIFT (287) 70
    RSHIFT (288) 71
    XOR (289) 69
    BOOL (290) 15
    CLASS (291) 1 2
    DOTLENGTH (292) 86
    DOUBLE (293) 17
    ELSE (294) 38
    IF (295) 38 39
    INT (296) 16
    PRINT (297) 47 48 49
    PARSEINT (298) 60 61
    PUBLIC (299) 9 10 11
    RETURN (300) 41 42
    STATIC (301) 9 10 11
    STRING (302) 23
    VOID (303) 20 21
    WHILE (304) 40
    RESERVED (305)
    MUL (306)
    LOWER (307)
    HIGHER (308)


Não terminais, com regras onde aparecem

    $accept (54)
        à esquerda: 0
    Program <no> (55)
        à esquerda: 1 2
        à direita: 0
    recPR <no> (56)
        à esquerda: 3 4 5 6 7 8
        à direita: 1 6 7 8
    MethodDecl <no> (57)
        à esquerda: 9
        à direita: 3 6
    FieldDecl <no> (58)
        à esquerda: 10 11 12
        à direita: 4 7
    recCOMMAID <no> (59)
        à esquerda: 13 14
        à direita: 10 14
    Type <no> (60)
        à esquerda: 15 16 17
        à direita: 10 11 18 19 22 24 32 33
    MethodHeader <no> (61)
        à esquerda: 18 19 20 21
        à direita: 9
    FormalParams <no> (62)
        à esquerda: 22 23
        à direita: 18 20
    recFP <no> (63)
        à esquerda: 24 25
        à direita: 22 24
    MethodBody <no> (64)
        à esquerda: 26 27
        à direita: 9
    recMD <no> (65)
        à esquerda: 28 29 30 31
        à direita: 26 30 31
    VarDecl <no> (66)
        à esquerda: 32 33
        à direita: 29 31
    recVAR <no> (67)
        à esquerda: 34 35
        à direita: 32 35
    Statement <no> (68)
        à esquerda: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        à direita: 28 30 38 39 40 51 52
    recSTAT <no> (69)
        à esquerda: 51 52
        à direita: 36 52
    MethodInvocation <no> (70)
        à esquerda: 53 54 55 56
        à direita: 43 82
    recCOMMAEXP <no> (71)
        à esquerda: 57 58
        à direita: 53 57
    Assignment <no> (72)
        à esquerda: 59
        à direita: 44 83
    ParseArgs <no> (73)
        à esquerda: 60 61
        à direita: 45 84
    Expr <no> (74)
        à esquerda: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        à direita: 38 39 40 41 47 53 54 57 58 59 60 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81


Estado 0

    0 $accept: • Program $end

    CLASS  troca e vai para estado 1

    Program  vai para estado 2


Estado 1

    1 Program: CLASS • ID LBRACE recPR RBRACE
    2        | CLASS • ID LBRACE RBRACE

    ID  troca e vai para estado 3


Estado 2

    0 $accept: Program • $end

    $end  troca e vai para estado 4


Estado 3

    1 Program: CLASS ID • LBRACE recPR RBRACE
    2        | CLASS ID • LBRACE RBRACE

    LBRACE  troca e vai para estado 5


Estado 4

    0 $accept: Program $end •

    $default  aceitar


Estado 5

    1 Program: CLASS ID LBRACE • recPR RBRACE
    2        | CLASS ID LBRACE • RBRACE

    error      troca e vai para estado 6
    RBRACE     troca e vai para estado 7
    SEMICOLON  troca e vai para estado 8
    PUBLIC     troca e vai para estado 9

    recPR       vai para estado 10
    MethodDecl  vai para estado 11
    FieldDecl   vai para estado 12


Estado 6

   12 FieldDecl: error • SEMICOLON

    SEMICOLON  troca e vai para estado 13


Estado 7

    2 Program: CLASS ID LBRACE RBRACE •

    $default  redução com regra 2 (Program)


Estado 8

    5 recPR: SEMICOLON •
    8      | SEMICOLON • recPR

    error      troca e vai para estado 6
    SEMICOLON  troca e vai para estado 8
    PUBLIC     troca e vai para estado 9

    RBRACE  redução com regra 5 (recPR)

    recPR       vai para estado 14
    MethodDecl  vai para estado 11
    FieldDecl   vai para estado 12


Estado 9

    9 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
   10 FieldDecl: PUBLIC • STATIC Type ID recCOMMAID SEMICOLON
   11          | PUBLIC • STATIC Type ID SEMICOLON

    STATIC  troca e vai para estado 15


Estado 10

    1 Program: CLASS ID LBRACE recPR • RBRACE

    RBRACE  troca e vai para estado 16


Estado 11

    3 recPR: MethodDecl •
    6      | MethodDecl • recPR

    error      troca e vai para estado 6
    SEMICOLON  troca e vai para estado 8
    PUBLIC     troca e vai para estado 9

    RBRACE  redução com regra 3 (recPR)

    recPR       vai para estado 17
    MethodDecl  vai para estado 11
    FieldDecl   vai para estado 12


Estado 12

    4 recPR: FieldDecl •
    7      | FieldDecl • recPR

    error      troca e vai para estado 6
    SEMICOLON  troca e vai para estado 8
    PUBLIC     troca e vai para estado 9

    RBRACE  redução com regra 4 (recPR)

    recPR       vai para estado 18
    MethodDecl  vai para estado 11
    FieldDecl   vai para estado 12


Estado 13

   12 FieldDecl: error SEMICOLON •

    $default  redução com regra 12 (FieldDecl)


Estado 14

    8 recPR: SEMICOLON recPR •

    $default  redução com regra 8 (recPR)


Estado 15

    9 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
   10 FieldDecl: PUBLIC STATIC • Type ID recCOMMAID SEMICOLON
   11          | PUBLIC STATIC • Type ID SEMICOLON

    BOOL    troca e vai para estado 19
    DOUBLE  troca e vai para estado 20
    INT     troca e vai para estado 21
    VOID    troca e vai para estado 22

    Type          vai para estado 23
    MethodHeader  vai para estado 24


Estado 16

    1 Program: CLASS ID LBRACE recPR RBRACE •

    $default  redução com regra 1 (Program)


Estado 17

    6 recPR: MethodDecl recPR •

    $default  redução com regra 6 (recPR)


Estado 18

    7 recPR: FieldDecl recPR •

    $default  redução com regra 7 (recPR)


Estado 19

   15 Type: BOOL •

    $default  redução com regra 15 (Type)


Estado 20

   17 Type: DOUBLE •

    $default  redução com regra 17 (Type)


Estado 21

   16 Type: INT •

    $default  redução com regra 16 (Type)


Estado 22

   20 MethodHeader: VOID • ID LPAR FormalParams RPAR
   21             | VOID • ID LPAR RPAR

    ID  troca e vai para estado 25


Estado 23

   10 FieldDecl: PUBLIC STATIC Type • ID recCOMMAID SEMICOLON
   11          | PUBLIC STATIC Type • ID SEMICOLON
   18 MethodHeader: Type • ID LPAR FormalParams RPAR
   19             | Type • ID LPAR RPAR

    ID  troca e vai para estado 26


Estado 24

    9 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  troca e vai para estado 27

    MethodBody  vai para estado 28


Estado 25

   20 MethodHeader: VOID ID • LPAR FormalParams RPAR
   21             | VOID ID • LPAR RPAR

    LPAR  troca e vai para estado 29


Estado 26

   10 FieldDecl: PUBLIC STATIC Type ID • recCOMMAID SEMICOLON
   11          | PUBLIC STATIC Type ID • SEMICOLON
   18 MethodHeader: Type ID • LPAR FormalParams RPAR
   19             | Type ID • LPAR RPAR

    COMMA      troca e vai para estado 30
    LPAR       troca e vai para estado 31
    SEMICOLON  troca e vai para estado 32

    recCOMMAID  vai para estado 33


Estado 27

   26 MethodBody: LBRACE • recMD RBRACE
   27           | LBRACE • RBRACE

    error      troca e vai para estado 34
    ID         troca e vai para estado 35
    LBRACE     troca e vai para estado 36
    RBRACE     troca e vai para estado 37
    SEMICOLON  troca e vai para estado 38
    BOOL       troca e vai para estado 19
    DOUBLE     troca e vai para estado 20
    IF         troca e vai para estado 39
    INT        troca e vai para estado 21
    PRINT      troca e vai para estado 40
    PARSEINT   troca e vai para estado 41
    RETURN     troca e vai para estado 42
    WHILE      troca e vai para estado 43

    Type              vai para estado 44
    recMD             vai para estado 45
    VarDecl           vai para estado 46
    Statement         vai para estado 47
    MethodInvocation  vai para estado 48
    Assignment        vai para estado 49
    ParseArgs         vai para estado 50


Estado 28

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  redução com regra 9 (MethodDecl)


Estado 29

   20 MethodHeader: VOID ID LPAR • FormalParams RPAR
   21             | VOID ID LPAR • RPAR

    RPAR    troca e vai para estado 51
    BOOL    troca e vai para estado 19
    DOUBLE  troca e vai para estado 20
    INT     troca e vai para estado 21
    STRING  troca e vai para estado 52

    Type          vai para estado 53
    FormalParams  vai para estado 54


Estado 30

   13 recCOMMAID: COMMA • ID
   14           | COMMA • ID recCOMMAID

    ID  troca e vai para estado 55


Estado 31

   18 MethodHeader: Type ID LPAR • FormalParams RPAR
   19             | Type ID LPAR • RPAR

    RPAR    troca e vai para estado 56
    BOOL    troca e vai para estado 19
    DOUBLE  troca e vai para estado 20
    INT     troca e vai para estado 21
    STRING  troca e vai para estado 52

    Type          vai para estado 53
    FormalParams  vai para estado 57


Estado 32

   11 FieldDecl: PUBLIC STATIC Type ID SEMICOLON •

    $default  redução com regra 11 (FieldDecl)


Estado 33

   10 FieldDecl: PUBLIC STATIC Type ID recCOMMAID • SEMICOLON

    SEMICOLON  troca e vai para estado 58


Estado 34

   50 Statement: error • SEMICOLON

    SEMICOLON  troca e vai para estado 59


Estado 35

   53 MethodInvocation: ID • LPAR Expr recCOMMAEXP RPAR
   54                 | ID • LPAR Expr RPAR
   55                 | ID • LPAR RPAR
   56                 | ID • LPAR error RPAR
   59 Assignment: ID • ASSIGN Expr

    ASSIGN  troca e vai para estado 60
    LPAR    troca e vai para estado 61


Estado 36

   36 Statement: LBRACE • recSTAT RBRACE
   37          | LBRACE • RBRACE

    error      troca e vai para estado 34
    ID         troca e vai para estado 35
    LBRACE     troca e vai para estado 36
    RBRACE     troca e vai para estado 62
    SEMICOLON  troca e vai para estado 38
    IF         troca e vai para estado 39
    PRINT      troca e vai para estado 40
    PARSEINT   troca e vai para estado 41
    RETURN     troca e vai para estado 42
    WHILE      troca e vai para estado 43

    Statement         vai para estado 63
    recSTAT           vai para estado 64
    MethodInvocation  vai para estado 48
    Assignment        vai para estado 49
    ParseArgs         vai para estado 50


Estado 37

   27 MethodBody: LBRACE RBRACE •

    $default  redução com regra 27 (MethodBody)


Estado 38

   46 Statement: SEMICOLON •

    $default  redução com regra 46 (Statement)


Estado 39

   38 Statement: IF • LPAR Expr RPAR Statement ELSE Statement
   39          | IF • LPAR Expr RPAR Statement

    LPAR  troca e vai para estado 65


Estado 40

   47 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   48          | PRINT • LPAR STRLIT RPAR SEMICOLON
   49          | PRINT • LPAR RPAR SEMICOLON

    LPAR  troca e vai para estado 66


Estado 41

   60 ParseArgs: PARSEINT • LPAR ID LSQ Expr RSQ RPAR
   61          | PARSEINT • LPAR error RPAR

    LPAR  troca e vai para estado 67


Estado 42

   41 Statement: RETURN • Expr SEMICOLON
   42          | RETURN • SEMICOLON

    ID         troca e vai para estado 68
    INTLIT     troca e vai para estado 69
    REALLIT    troca e vai para estado 70
    BOOLLIT    troca e vai para estado 71
    LPAR       troca e vai para estado 72
    MINUS      troca e vai para estado 73
    NOT        troca e vai para estado 74
    PLUS       troca e vai para estado 75
    SEMICOLON  troca e vai para estado 76
    PARSEINT   troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 80


Estado 43

   40 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  troca e vai para estado 81


Estado 44

   32 VarDecl: Type • ID recVAR SEMICOLON
   33        | Type • ID SEMICOLON

    ID  troca e vai para estado 82


Estado 45

   26 MethodBody: LBRACE recMD • RBRACE

    RBRACE  troca e vai para estado 83


Estado 46

   29 recMD: VarDecl •
   31      | VarDecl • recMD

    error      troca e vai para estado 34
    ID         troca e vai para estado 35
    LBRACE     troca e vai para estado 36
    SEMICOLON  troca e vai para estado 38
    BOOL       troca e vai para estado 19
    DOUBLE     troca e vai para estado 20
    IF         troca e vai para estado 39
    INT        troca e vai para estado 21
    PRINT      troca e vai para estado 40
    PARSEINT   troca e vai para estado 41
    RETURN     troca e vai para estado 42
    WHILE      troca e vai para estado 43

    RBRACE  redução com regra 29 (recMD)

    Type              vai para estado 44
    recMD             vai para estado 84
    VarDecl           vai para estado 46
    Statement         vai para estado 47
    MethodInvocation  vai para estado 48
    Assignment        vai para estado 49
    ParseArgs         vai para estado 50


Estado 47

   28 recMD: Statement •
   30      | Statement • recMD

    error      troca e vai para estado 34
    ID         troca e vai para estado 35
    LBRACE     troca e vai para estado 36
    SEMICOLON  troca e vai para estado 38
    BOOL       troca e vai para estado 19
    DOUBLE     troca e vai para estado 20
    IF         troca e vai para estado 39
    INT        troca e vai para estado 21
    PRINT      troca e vai para estado 40
    PARSEINT   troca e vai para estado 41
    RETURN     troca e vai para estado 42
    WHILE      troca e vai para estado 43

    RBRACE  redução com regra 28 (recMD)

    Type              vai para estado 44
    recMD             vai para estado 85
    VarDecl           vai para estado 46
    Statement         vai para estado 47
    MethodInvocation  vai para estado 48
    Assignment        vai para estado 49
    ParseArgs         vai para estado 50


Estado 48

   43 Statement: MethodInvocation • SEMICOLON

    SEMICOLON  troca e vai para estado 86


Estado 49

   44 Statement: Assignment • SEMICOLON

    SEMICOLON  troca e vai para estado 87


Estado 50

   45 Statement: ParseArgs • SEMICOLON

    SEMICOLON  troca e vai para estado 88


Estado 51

   21 MethodHeader: VOID ID LPAR RPAR •

    $default  redução com regra 21 (MethodHeader)


Estado 52

   23 FormalParams: STRING • LSQ RSQ ID

    LSQ  troca e vai para estado 89


Estado 53

   22 FormalParams: Type • ID recFP

    ID  troca e vai para estado 90


Estado 54

   20 MethodHeader: VOID ID LPAR FormalParams • RPAR

    RPAR  troca e vai para estado 91


Estado 55

   13 recCOMMAID: COMMA ID •
   14           | COMMA ID • recCOMMAID

    COMMA  troca e vai para estado 30

    $default  redução com regra 13 (recCOMMAID)

    recCOMMAID  vai para estado 92


Estado 56

   19 MethodHeader: Type ID LPAR RPAR •

    $default  redução com regra 19 (MethodHeader)


Estado 57

   18 MethodHeader: Type ID LPAR FormalParams • RPAR

    RPAR  troca e vai para estado 93


Estado 58

   10 FieldDecl: PUBLIC STATIC Type ID recCOMMAID SEMICOLON •

    $default  redução com regra 10 (FieldDecl)


Estado 59

   50 Statement: error SEMICOLON •

    $default  redução com regra 50 (Statement)


Estado 60

   59 Assignment: ID ASSIGN • Expr

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 94


Estado 61

   53 MethodInvocation: ID LPAR • Expr recCOMMAEXP RPAR
   54                 | ID LPAR • Expr RPAR
   55                 | ID LPAR • RPAR
   56                 | ID LPAR • error RPAR

    error     troca e vai para estado 95
    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    RPAR      troca e vai para estado 96
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 97


Estado 62

   37 Statement: LBRACE RBRACE •

    $default  redução com regra 37 (Statement)


Estado 63

   51 recSTAT: Statement •

    $default  redução com regra 51 (recSTAT)


Estado 64

   36 Statement: LBRACE recSTAT • RBRACE
   52 recSTAT: recSTAT • Statement

    error      troca e vai para estado 34
    ID         troca e vai para estado 35
    LBRACE     troca e vai para estado 36
    RBRACE     troca e vai para estado 98
    SEMICOLON  troca e vai para estado 38
    IF         troca e vai para estado 39
    PRINT      troca e vai para estado 40
    PARSEINT   troca e vai para estado 41
    RETURN     troca e vai para estado 42
    WHILE      troca e vai para estado 43

    Statement         vai para estado 99
    MethodInvocation  vai para estado 48
    Assignment        vai para estado 49
    ParseArgs         vai para estado 50


Estado 65

   38 Statement: IF LPAR • Expr RPAR Statement ELSE Statement
   39          | IF LPAR • Expr RPAR Statement

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 100


Estado 66

   47 Statement: PRINT LPAR • Expr RPAR SEMICOLON
   48          | PRINT LPAR • STRLIT RPAR SEMICOLON
   49          | PRINT LPAR • RPAR SEMICOLON

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    STRLIT    troca e vai para estado 101
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    RPAR      troca e vai para estado 102
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 103


Estado 67

   60 ParseArgs: PARSEINT LPAR • ID LSQ Expr RSQ RPAR
   61          | PARSEINT LPAR • error RPAR

    error  troca e vai para estado 104
    ID     troca e vai para estado 105


Estado 68

   53 MethodInvocation: ID • LPAR Expr recCOMMAEXP RPAR
   54                 | ID • LPAR Expr RPAR
   55                 | ID • LPAR RPAR
   56                 | ID • LPAR error RPAR
   59 Assignment: ID • ASSIGN Expr
   85 Expr: ID •
   86     | ID • DOTLENGTH

    ASSIGN     troca e vai para estado 60
    LPAR       troca e vai para estado 61
    DOTLENGTH  troca e vai para estado 106

    $default  redução com regra 85 (Expr)


Estado 69

   87 Expr: INTLIT •

    $default  redução com regra 87 (Expr)


Estado 70

   88 Expr: REALLIT •

    $default  redução com regra 88 (Expr)


Estado 71

   89 Expr: BOOLLIT •

    $default  redução com regra 89 (Expr)


Estado 72

   81 Expr: LPAR • Expr RPAR
   90     | LPAR • error RPAR

    error     troca e vai para estado 107
    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 108


Estado 73

   78 Expr: MINUS • Expr

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 109


Estado 74

   80 Expr: NOT • Expr

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 110


Estado 75

   79 Expr: PLUS • Expr

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 111


Estado 76

   42 Statement: RETURN SEMICOLON •

    $default  redução com regra 42 (Statement)


Estado 77

   82 Expr: MethodInvocation •

    $default  redução com regra 82 (Expr)


Estado 78

   83 Expr: Assignment •

    $default  redução com regra 83 (Expr)


Estado 79

   84 Expr: ParseArgs •

    $default  redução com regra 84 (Expr)


Estado 80

   41 Statement: RETURN Expr • SEMICOLON
   62 Expr: Expr • PLUS Expr
   63     | Expr • MINUS Expr
   64     | Expr • STAR Expr
   65     | Expr • DIV Expr
   66     | Expr • MOD Expr
   67     | Expr • AND Expr
   68     | Expr • OR Expr
   69     | Expr • XOR Expr
   70     | Expr • LSHIFT Expr
   71     | Expr • RSHIFT Expr
   72     | Expr • EQ Expr
   73     | Expr • GE Expr
   74     | Expr • GT Expr
   75     | Expr • LE Expr
   76     | Expr • LT Expr
   77     | Expr • NE Expr

    AND        troca e vai para estado 112
    STAR       troca e vai para estado 113
    DIV        troca e vai para estado 114
    EQ         troca e vai para estado 115
    GE         troca e vai para estado 116
    GT         troca e vai para estado 117
    LE         troca e vai para estado 118
    LT         troca e vai para estado 119
    MINUS      troca e vai para estado 120
    MOD        troca e vai para estado 121
    NE         troca e vai para estado 122
    OR         troca e vai para estado 123
    PLUS       troca e vai para estado 124
    SEMICOLON  troca e vai para estado 125
    LSHIFT     troca e vai para estado 126
    RSHIFT     troca e vai para estado 127
    XOR        troca e vai para estado 128


Estado 81

   40 Statement: WHILE LPAR • Expr RPAR Statement

    ID        troca e vai para estado 68
    INTLIT    troca e vai para estado 69
    REALLIT   troca e vai para estado 70
    BOOLLIT   troca e vai para estado 71
    LPAR      troca e vai para estado 72
    MINUS     troca e vai para estado 73
    NOT       troca e vai para estado 74
    PLUS      troca e vai para estado 75
    PARSEINT  troca e vai para estado 41

    MethodInvocation  vai para estado 77
    Assignment        vai para estado 78
    ParseArgs         vai para estado 79
    Expr              vai para estado 129


Estado 82

   32 VarDecl: Type ID • recVAR SEMICOLON
   33        | Type ID • SEMICOLON

    COMMA      troca e vai para estado 130
    SEMICOLON  troca e vai para estado 131

    recVAR  vai para estado 132


Estado 83

   26 MethodBody: LBRACE recMD RBRACE •

    $default  redução com regra 26 (MethodBody)


Estado 84

   31 recMD: VarDecl recMD •

    $default  redução com regra 31 (recMD)


Estado 85

   30 recMD: Statement recMD •

    $default  redução com regra 30 (recMD)


Estado 86

   43 Statement: MethodInvocation SEMICOLON •

    $default  redução com regra 43 (Statement)


Estado 87

   44 Statement: Assignment SEMICOLON •

    $default  redução com regra 44 (Statement)


Estado 88

   45 Statement: ParseArgs SEMICOLON •

    $default  redução com regra 45 (Statement)


Estado 89

   23 FormalParams: STRING LSQ • RSQ ID

    RSQ  troca e vai para estado 133


Estado 90

   22 FormalParams: Type ID • recFP

    COMMA  troca e vai para estado 134

    $default  redução com regra 25 (recFP)

    recFP  vai para estado 135


Estado 91

   20 MethodHeader: VOID ID LPAR FormalParams RPAR •

    $default  redução com regra 20 (MethodHeader)


Estado 92

   14 recCOMMAID: COMMA ID recCOMMAID •

    $default  redução com regra 14 (recCOMMAID)


Estado 93

   18 MethodHeader: Type ID LPAR FormalParams RPAR •

    $default  redução com regra 18 (MethodHeader)


Estado 94

   59 Assignment: ID ASSIGN Expr •
   62 Expr: Expr • PLUS Expr
   63     | Expr • MINUS Expr
   64     | Expr • STAR Expr
   65     | Expr • DIV Expr
   66     | Expr • MOD Expr
   67     | Expr • AND Expr
   68     | Expr • OR Expr
   69     | Expr • XOR Expr
   70     | Expr • LSHIFT Expr
   71     | Expr • RSHIFT Expr
   72     | Expr • EQ Expr
   73     | Expr • GE Expr
   74     | Expr • GT Expr
   75     | Expr • LE Expr
   76     | Expr • LT Expr
   77     | Expr • NE Expr

    AND     troca e vai para estado 112
    STAR    troca e vai para estado 113
    DIV     troca e vai para estado 114
    EQ      troca e vai para estado 115
    GE      troca e vai para estado 116
    GT      troca e vai para estado 117
    LE      troca e vai para estado 118
    LT      troca e vai para estado 119
    MINUS   troca e vai para estado 120
    MOD     troca e vai para estado 121
    NE      troca e vai para estado 122
    OR      troca e vai para estado 123
    PLUS    troca e vai para estado 124
    LSHIFT  troca e vai para estado 126
    RSHIFT  troca e vai para estado 127
    XOR     troca e vai para estado 128

    $default  redução com regra 59 (Assignment)


Estado 95

   56 MethodInvocation: ID LPAR error • RPAR

    RPAR  troca e vai para estado 136


Estado 96

   55 MethodInvocation: ID LPAR RPAR •

    $default  redução com regra 55 (MethodInvocation)


Estado 97

   53 MethodInvocation: ID LPAR Expr • recCOMMAEXP RPAR
   54                 | ID LPAR Expr • RPAR
   62 Expr: Expr • PLUS Expr
   63     | Expr • MINUS Expr
   64     | Expr • STAR Expr
   65     | Expr • DIV Expr
   66     | Expr • MOD Expr
   67     | Expr • AND Expr
   68     | Expr • OR Expr
   69     | Expr • XOR Expr
   70     | Expr • LSHIFT Expr
   71     | Expr • RSHIFT Expr
   72     | Expr • EQ Expr
   73     | Expr • GE Expr
   74     | Expr • GT Expr
   75     | Expr • LE Expr
   76     | Expr • LT Expr
   77     | Expr • NE Expr
